// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlocksController POST /blocks with a missing api key returns a 401 1`] = `
Object {
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`BlocksController POST /blocks with missing arguments returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "blocks.0.hash must be a string",
    "blocks.0.sequence must be an integer number",
    "blocks.0.difficulty must be a string",
    "blocks.0.type must be a valid enum value",
    "blocks.0.timestamp must be a Date instance",
    "blocks.0.transactions_count must be an integer number",
    "blocks.0.graffiti must be a string",
  ],
  "statusCode": 422,
}
`;

exports[`BlocksController POST /blocks with too many blocks returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "blocks must contain not more than 100 elements",
  ],
  "statusCode": 422,
}
`;
